<resources>
    <string name="app_name">PAPEO</string>
    <string name="nombre">Nombre</string>
    <string name="correoElectronico">Correo Electronico</string>
    <string name="apellidos">Apellidos</string>
    <string name="nombreUsuario">Nombre del usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="login_error_vacio">Los campos no pueden estar vacios</string>
    <string name="login_error_contraseña">Las contraseñas no coinciden</string>
    <string name="register_error_alphabetic">Solo caracteres alfabéticos</string>
    <string name="register_error_alphanumeric">Solo caracteres alfanuméricos</string>
    <string name="login_error">El correo o la contraseña son incorrectos</string>
    <string name="login_error_longitud">Longitud incorrecta</string>
    <string name="nombreRestaurante">Nombre del restaurante</string>
    <string name="list_restaurante_exit">Cerrar sesión</string>
    <string name="list_restaurante_crear">Registrar nuevo restaurante</string>
    <string name="list_restaurante_info">Informacion de los restaurantes</string>
    <string name="tipoRestaurante">Tipo de restaurante</string>
    <string name="descripcionRestaurante">Descripción del restaurante</string>
    <string name="ubicacionRestaurante">Ubicación del restaurante</string>
    <string name="telefonoRestaurante">Telefono del restaurante</string>
    <string name="crear">Crear</string>
    <string name="borrarRestaurante">Borrar restaurante</string>
    <string name="Register_error_contraseña">Las contraseñas son diferentes</string>
    <string name="title_act">Información</string>
    <string name="title_tlp">Telefono</string>
    <string name="client_service_tlp">665133149</string>
    <string name="description_tlp">Telefono para poder reservar</string>
    <string name="title_email">Correo Electronico</string>
    <string name="email">christianraulamo24@gmail.com</string>
    <string name="title_location">Ubicacion del restaurante</string>
    <string name="location">¿Donde encontrarlo?</string>
    <string name="client_service">client_service</string>
    <string name="support">support</string>
    <string name="support_tlp">support_tlp</string>
    <string name="description_support">description_support</string>
    <string name="masInfo">Más Información</string>
    <string name="comentario">Comentarios</string>
</resources>
