<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fitsSystemWindows="true">

<android.support.v7.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="0dp"
    android:layout_height="56dp"
    android:gravity="center"
    app:layout_constraintHorizontal_bias="0.49"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:layout_constraintRight_creator="1"
    tools:layout_constraintLeft_creator="1">

</android.support.v7.widget.Toolbar>

    <android.support.constraint.ConstraintLayout

        android:id="@+id/relativeToolbar2"
        android:layout_width="0dp"
        android:layout_height="53dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/title_act"
            android:textSize="30sp"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <ImageButton
            android:id="@+id/iconMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginLeft="26dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1" />

    </android.support.constraint.ConstraintLayout>

<ScrollView
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="@+id/relativeToolbar2"
    app:layout_constraintEnd_toEndOf="@+id/relativeToolbar2"
    app:layout_constraintTop_toBottomOf="@+id/relativeToolbar2"
    app:layout_constraintVertical_bias="0.0">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayoutContentContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <android.support.constraint.ConstraintLayout
            android:id="@+id/telephone"
            android:layout_width="0dp"
            android:layout_height="148dp"
            android:layout_marginTop="36dp"
            android:onClick="llamar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textTitleTelephone"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/title_tlp"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/imageViewTelephone"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textTelephone"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_marginStart="68dp"
                android:layout_marginLeft="68dp"
                android:layout_marginTop="12dp"
                android:text="TextView"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textTitleTelephone" />

            <TextView
                android:id="@+id/textBody1"
                android:layout_width="376dp"
                android:layout_height="38dp"
                android:layout_marginStart="68dp"
                android:layout_marginLeft="68dp"
                android:layout_marginTop="12dp"
                android:text="@string/description_tlp"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textTelephone" />

            <ImageView
                android:id="@+id/imageViewTelephone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/telefono" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/telephone"
            android:layout_marginLeft="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="30dp"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/constraintLayout8"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp" />



        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout9"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/telephone"
            android:layout_marginLeft="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="30dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout9"
            android:layout_marginLeft="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="30dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:id="@+id/constraintLayout10"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp" />


        <android.support.constraint.ConstraintLayout
            android:id="@+id/location"
            android:layout_width="0dp"
            android:layout_height="95dp"
            android:layout_marginTop="20dp"
            android:onClick="mapa"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout10"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/textTitleLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/title_location"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/imageViewLocation"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/location"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="@+id/textTitleLocation"
                app:layout_constraintTop_toBottomOf="@+id/textTitleLocation" />

            <ImageView
                android:id="@+id/imageViewLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/lugar" />
        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>
</android.support.constraint.ConstraintLayout>